<resources>

    <string name="app_name">Status Heads</string>
    
    <string name="label_following">following</string>
    <string name="label_followers">followers</string>
    <string name="label_timeline">Timeline</string>
    <string name="label_mentions">Mentions</string>
    <string name="label_dm">DM</string>
    <string name="label_retweets">Retweets</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_search">Search</string>
    <string name="label_settings">Settings</string>
    <string name="fragment_send_tweet__saved_draft">Saved Draft</string>
    <string name="fragment_send_tweet__new_tweet">New Tweet</string>
    <string name="fragment_send_tweet__add_photo_from_gallery">add photo from gallery</string>
    <string name="fragment_send_tweet__add_photo_from_camera">add photo from camera</string>
    <string name="fragment_send_tweet__add_gps_coordinates">add photo from camera</string>
    <string name="fragment_send_tweet__add_set_time">set time to send tweet</string>
    <string name="fragment_send_tweet__add_send_tweet">send tweet</string>

</resources>